--- a/firmware/firmware quantum/quantum_webserver/fs/404.html
+++ b/firmware/firmware quantum/quantum_webserver/fs/404.html
@@ -1,6 +1,6 @@
 <html>
 <head><title>lwIP - A Lightweight TCP/IP Stack</title></head>
-<body bgcolor="#061415" text="white">
+<body bgcolor="#FFFFFF" text="GRAY">
 <img src="images/logo.png">
     <table width="100%">
       <tr valign="top"><td width="80">	  
@@ -13,7 +13,7 @@
 	    Sorry, the page you are requesting was not found on this
 	    server. 
 		
-	<a href="index.html" ; style="color:orange">startpage</a>
+	<a href="index.html" ; style="color:gray">startpage</a>
 	  </p>
 	</td><td>
 	  &nbsp;
